<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/sim_front_proxy_category">

        <Preference
            app:icon="@drawable/ic_communication_phonelink_ring"
            app:key="simFrontProxyCurrent"
            app:persistent="false"
            app:selectable="false"
            app:title="@string/sim_front_proxy_current" />

        <Preference
            app:icon="@drawable/ic_action_note_add"
            app:key="simFrontProxyAdd"
            app:persistent="false"
            app:title="@string/sim_front_proxy_add" />
    </PreferenceCategory>

    <PreferenceCategory
        app:key="simFrontProxyList"
        app:title="@string/sim_front_proxy_bindings" />

    <PreferenceCategory app:title="@string/sim_front_proxy_misc">
        <Preference
            app:icon="@drawable/ic_baseline_delete_24"
            app:key="simFrontProxyClear"
            app:persistent="false"
            app:title="@string/sim_front_proxy_clear" />
    </PreferenceCategory>
</PreferenceScreen>
